# amsterdam-housing-price-prediction

./: Ams_xgb_pipeline.17.11.2025.pkl  Ams_xgb_pipeline.pkl  Data prep.ipynb  Dockerfile  Predict using XGB model.ipynb  README old.md  README v2.md  README.md  main.py  postcode-buurt-wijk.csv  predict.py  pyproject.toml  requirements.txt  serve.py  train.py  training pipeline.ipynb  web service tests.ipynb  xgb_model_Ams_17.11.2025.json
